--- a/cloud-config-repo/cloud-simple-service-test.properties
+++ b/cloud-config-repo/cloud-simple-service-test.properties
@@ -1,6 +1,4 @@
 mysqldb.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
-mysqldb.datasource.workurl=jdbc\:mysql\://localhost\:3306/test?useUnicode\=true&characterEncoding\=utf-8
 mysqldb.datasource.username=root
-
-mysqldb.datasource.password=root
+mysqldb.datasource.password=
 logging.level.org.springframework.web:DEBUG
